--- a/packages/db-client/package.json
+++ b/packages/db-client/package.json
@@ -6,5 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {},
-  "devDependencies": {}
+  "devDependencies": {
+    "tsconfig": "*"
+  }
 }
