feat: add dependency-cruiser for dependency graph generation
- Updated package.json to include a script for generating a dependency graph using dependency-cruiser.
- Added dependency-cruiser as a devDependency.
- Created a configuration file for dependency-cruiser to include only packages and ignore node_modules.
- Generated dependency graph SVG and added it to the docs/images directory.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "packages/*"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dep:graph": "depcruise --output-type dot . | dot -T svg -o docs/images/dependency-graph.svg"
+  },
+  "devDependencies": {
+    "dependency-cruiser": "^17.0.1"
   }
 }
